--- a/Article/article.tex
+++ b/Article/article.tex
@@ -22,6 +22,7 @@
 \usepackage{framed}
 %%\usepackage{caption}
 \usepackage{subcaption}
+\captionsetup{compatibility=false}
 \usepackage{todonotes}
 %%\newtheorem{theorem}{Theorem}
 %%\newtheorem{corollary}{Corollary}[theorem]
@@ -690,12 +691,10 @@ To know the affect of heterogeneity, we set the memory requirement of each task 
 %%\end{figure}	
 
 \section{Conclusion and Perspectives}
-\begin{itemize}
-	\item Evaluated different heuristics
-	\item proved NP-complete problem
-	\item Plan to implement the best heuristic in a runtime system  for NWChem algorithms and evaluation on Summit supercomputer
-\end{itemize}
-	
+
+
+In this article, we consider the problem of deciding the order of data transfers between two memory nodes such that overlap of communication and  computation is maximized. With Exascale computing, applications face bottlenecks due to communications. Hence, it is extremely important to achieve the maximum overlap of computation and communication in order to exploit the full potential of the system. We show that determining the order of data transfers is an NP complete problem. We proposed multiple data transfer heuristics and evaluated them on two molecular chemistry kernels, HF and CCSD. Our results show that some of our heuristics achieve significant overlap and perform very close to the lower bound of makespan. We plan to evaluate our strategies on different applications coming from multiple domains. We also plan to study the behavior of our strategies in the context of overlapping CPU-GPU communications with computation. A runtime system aims at exposing different heuristics, to maximize the communication-computation overlap, at developer level and automatically selecting the best one is currently underway.
+
 %%	\begin{itemize}
 %%		\item Machine description
 %%		\item temporary data requirement
@@ -703,80 +702,6 @@ To know the affect of heterogeneity, we set the memory requirement of each task 
 %%		\item Think about results and graphs (Most probably results in $R$ plots)
 %%	\end{itemize}
 
-%%%%	\section{First Section}
-%%%%	 \subsection{A Subsection Sample} Please note that the
-%%%%	first paragraph of a section or subsection is not indented. The first paragraph
-%%%%	that follows a table, figure, equation etc. does not need an indent, either.
-%%%%	
-%%%%	Subsequent paragraphs, however, are indented.
-%%%%	
-%%%%	\subsubsection{Sample Heading (Third Level)} Only two levels of headings should
-%%%%	be numbered. Lower level headings remain unnumbered; they are formatted as
-%%%%	run-in headings.
-%%%%	
-%%%%	\paragraph{Sample Heading (Fourth Level)} The contribution should contain no
-%%%%	more than four levels of headings. Table~\ref{tab1} gives a summary of all
-%%%%	heading levels.
-%%%%	
-%%%%	\begin{table} \caption{Table captions should be placed above the
-%%%%			tables.}\label{tab1} \begin{tabular}{|l|l|l|} \hline Heading level &  Example &
-%%%%			Font size and style\\ \hline Title (centered) &  {\Large\bfseries Lecture
-%%%%				Notes} & 14 point, bold\\ 1st-level heading &  {\large\bfseries 1 Introduction}
-%%%%			& 12 point, bold\\ 2nd-level heading & {\bfseries 2.1 Printing Area} & 10
-%%%%			point, bold\\ 3rd-level heading & {\bfseries Run-in Heading in Bold.} Text
-%%%%			follows & 10 point, bold\\ 4th-level heading & {\itshape Lowest Level Heading.}
-%%%%			Text follows & 10 point, italic\\ \hline \end{tabular} \end{table}
-%%%%	
-%%%%	
-%%%%	\noindent Displayed equations are centered and set on a separate line.
-%%%%	\begin{equation} x + y = z \end{equation} Please try to avoid rasterized images
-%%%%	for line-art diagrams and schemas. Whenever possible, use vector graphics
-%%%%	instead (see Fig.~\ref{fig1}).
-%%%%	
-%%%%	\begin{figure} \includegraphics[width=\textwidth]{fig1.eps} \caption{A figure
-%%%%			caption is always placed below the illustration. Please note that short
-%%%%			captions are centered, while long ones are justified by the macro package
-%%%%			automatically.} \label{fig1} \end{figure}
-%%%%	
-%%%%	\begin{theorem} This is a sample theorem. The run-in heading is set in bold,
-%%%%		while the following text appears in italics. Definitions, lemmas, propositions,
-%%%%		and corollaries are styled the same way. \end{theorem} %
-%%%%	% the environments 'definition', 'lemma', 'proposition', 'corollary',
-%%%%	% 'remark', and 'example' are defined in the LLNCS documentclass as well.
-%%%%	%
-%%%%	\begin{proof} Proofs, examples, and remarks have the initial word in italics,
-%%%%		while the following text appears in normal font. \end{proof} For citations of
-%%%%	references, we prefer the use of square brackets and consecutive numbers.
-%%%%	Citations using labels or the author/year convention are also acceptable. The
-%%%%	following bibliography provides a sample reference list with entries for
-%%%%	journal articles~\cite{ref_article1}, an LNCS chapter~\cite{ref_lncs1}, a
-%%%%	book~\cite{ref_book1}, proceedings without editors~\cite{ref_proc1}, and a
-%%%%	homepage~\cite{ref_url1}. Multiple citations are grouped
-%%%%	\cite{ref_article1,ref_lncs1,ref_book1},
-%%%%	\cite{ref_article1,ref_book1,ref_proc1,ref_url1}. %
-%%%%	% ---- Bibliography ----
-%%%%	%
-%%%%	% BibTeX users should specify bibliography style 'splncs04'.
-%%%%	% References will then be sorted and formatted in the correct style.
-%%%%	%
-%%%%	% \bibliographystyle{splncs04}
-%%%%	% \bibliography{mybibliography}
-%%%%	%
-%%%%	\begin{thebibliography}{8} \bibitem{ref_article1} Author, F.: Article title.
-%%%%		Journal \textbf{2}(5), 99--110 (2016)
-%%%%		
-%%%%		\bibitem{ref_lncs1} Author, F., Author, S.: Title of a proceedings paper. In:
-%%%%		Editor, F., Editor, S. (eds.) CONFERENCE 2016, LNCS, vol. 9999, pp. 1--13.
-%%%%		Springer, Heidelberg (2016). \doi{10.10007/1234567890}
-%%%%		
-%%%%		\bibitem{ref_book1} Author, F., Author, S., Author, T.: Book title. 2nd edn.
-%%%%		Publisher, Location (1999)
-%%%%		
-%%%%		\bibitem{ref_proc1} Author, A.-B.: Contribution title. In: 9th International
-%%%%		Proceedings on Proceedings, pp. 1--2. Publisher, Location (2010)
-%%%%		
-%%%%		\bibitem{ref_url1} LNCS Homepage, \url{http://www.springer.com/lncs}. Last
-%%%%		accessed 4 Oct 2017 \end{thebibliography} 
 
 \bibliographystyle{IEEEtran}
 % argument is your BibTeX string definitions and bibliography database(s)
