--- a/Article/article.tex
+++ b/Article/article.tex
@@ -40,6 +40,8 @@
 \usepackage[cmex10,fleqn]{amsmath}
 \usepackage{amsfonts}
 
+%%to comment all todos
+%\renewcommand{\todo}{}
 
 \newcommand{\hp}{{\sc HeteroPrio}\xspace}
 \SetKw{continue}{continue}
